# libs/generated/api-swagger/swagger.json
@@ -5,9 +5,41 @@
     "version": "1.0"
   },
   "paths": {
+    "/auth/logout": {
+      "delete": {
+        "tags": [
+          "Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+        ],
+        "operationId": "ApiEndpointsAuthLogoutLogoutEndpoint",
+        "responses": {
+          "204": {
+            "description": "No Content",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NoContent"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnauthorizedHttpResult"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/login": {
       "post": {
-        "tags": ["Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"],
+        "tags": [
+          "Api, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+        ],
         "operationId": "ApiEndpointsAuthLoginLoginEndpoint",
         "requestBody": {
           "content": {
@@ -102,6 +134,17 @@
           },
           "isTwoFactorEnabled": {
             "type": "boolean"
+          }
+        },
+        "additionalProperties": false
+      },
+      "NoContent": {
+        "type": "object",
+        "properties": {
+          "statusCode": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
           }
         },
         "additionalProperties": false
